overflow fix

--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -7,6 +7,7 @@
         font-weight: lighter;
         font-size: 1.2em;
         width: 100%;
+        overflow: auto;
     }
 
     .boxContent {
